name:                leetcode-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/leetcode-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib.Utils,
                       N1_Two_Sum,
                       N217_Contains_Duplicate,
                       N242_Valid_Anagram
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       hashable,
                       unordered-containers,
                       QuickCheck
  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       ImportQualifiedPost
  ghc-options:         -Wall
                       -Wcompat
                       -Wno-compat-unqualified-imports
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/leetcode-haskell
